--- a/templates/index.html
+++ b/templates/index.html
@@ -31,6 +31,21 @@
             </div>
         </div>
 
+        <!-- <div class="row mb-3 justify-content-center">
+            <div class="col-md-6">
+                <div class="input-group">
+                    <input type="text" class="form-control" id="symbol-search" placeholder="Search by symbol (e.g., CNR)">
+                    <button class="btn btn-primary" type="button" id="search-button">
+                        <i class="bi bi-search"></i> Search
+                    </button>
+                    <button class="btn btn-outline-secondary" type="button" id="clear-search">
+                        Clear
+                    </button>
+                </div>
+                <div id="search-feedback" class="text-center mt-2 small"></div>
+            </div>
+        </div> -->
+
         <div class="row mb-2">
             <div class="col-12 d-flex justify-content-between align-items-center">
                 <h5 id="timeframe-title" class="mb-0">All Upcoming Dividend Stocks</h5>
