--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="coinzilla" content="4eaf9ca960c3b9a4e7398bfe288d3262" />
+    <meta name="google-adsense-account" content="ca-pub-1508109246096690">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Track upcoming dividend payments for TSX-listed stocks with real-time updates">
     <meta name="keywords" content="TSX dividends, Canadian stocks, dividend tracker, stock dividends, ex-dividend dates">
