--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="google-adsense-account" content="ca-pub-1508109246096690">
+    <meta name="google-site-verification" content="KMUJp7ARNYzoPKq369Ld19KnejwlEwXdOXSqTckfVW8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Track upcoming dividend payments for TSX-listed stocks with real-time updates">
     <meta name="keywords" content="TSX dividends, Canadian stocks, dividend tracker, stock dividends, ex-dividend dates">
